progressive-delivery-demo/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-demo
  labels:
    app: canary-demo
spec:
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: canary-demo
  template:
    metadata:
      labels:
        app: canary-demo
    spec:
      containers:
      - name: canary-demo
        image: quay.io/andrleite/rollouts-demo
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
