progressive-delivery-demo/kustomize/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mesh
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - hosts:
    - 'canary.demo'
    port:
      number: 80
      name: http
      protocol: HTTP
